feat: add ingredients management to backend and backoffice
